--- a/A2_NN.ipynb
+++ b/A2_NN.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Neural Networks\n",
     "\n",
-    "In this notebook, we will implement a fully-connected feed-forward neural network on the MNIST dataset and regularize it with early stopping, norm penalty, dropout batch normalization.\n",
+    "In this notebook, we will implement a fully-connected feed-forward neural network on the MNIST dataset and regularize it with early stopping, norm penalty, dropout and batch normalization.\n",
     "\n",
     "### Import Statements"
    ]
