--- a/A2_NN.ipynb
+++ b/A2_NN.ipynb
@@ -137,8 +137,8 @@
     "\n",
     "    def SGD(self, mini_batch):\n",
     "        \"\"\"Perform Stochstic Gradient Descent\"\"\"\n",
-    "        dropout_b = [np.random.binomial(1, self.dropout_p, size = b.shape) for b in self.biases]\n",
-    "        dropout_w = [np.random.binomial(1, self.dropout_p, size = w.shape) for w in self.weights]\n",
+    "        dropout_b = [np.random.binomial(1, 1-self.dropout_p, size = b.shape) for b in self.biases]\n",
+    "        dropout_w = [np.random.binomial(1, 1-self.dropout_p, size = w.shape) for w in self.weights]\n",
     "        del_b = [np.zeros(b.shape) for b in self.biases]\n",
     "        del_w = [np.zeros(w.shape) for w in self.weights]\n",
     "        for x, y in mini_batch:\n",
